@@ -22,8 +22,6 @@ private:
     virtual void    bind_input(binder& binder) override;
     virtual void    on_begin_line(const context& context) override;
     virtual void    on_end_line() override;
-    virtual void    on_matches_changed(const context& context) override;
-    virtual void    on_classifications_changed(const context& context) override;
     virtual void    on_input(const input& input, result& result, const context& context) override;
     virtual void    on_terminal_resize(int columns, int rows, const context& context) override;
     void            set_limit(printer& printer, pager_amount amount);
