@@ -5,6 +5,7 @@
 ### v1.1.22
 
 - Added `menu-complete-wraparound` (on by default) that controls whether completion commands wrap around when cycling past an end (affects popup windows as well).
+- Fixed match completion getting stuck (regression introduced in v1.1.19).
 - Fixed active mark region so it gets deactivated appropriately (it wasn't hooked up fully for Readline's callback mode, which is how Clink uses it).
 - Fixed `clink-show-help` (<kbd>Alt</kbd>+<kbd>H</kbd>) so it's able to list `C-@` bindings.
 - Fixed inconsistent mark color.
